<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cullen.tatu.view.fleet.FleetCreateActivity">


    <include android:id="@+id/header" layout="@layout/layout_activity_header"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>



        <EditText
            android:id="@+id/et_departure"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header"
            app:layout_constraintRight_toLeftOf="@+id/et_destination"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/fleet_departure"
            android:maxLength="50"/>


        <EditText
            android:id="@+id/et_destination"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header"
            app:layout_constraintLeft_toRightOf="@+id/et_departure"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/fleet_destination"
            android:maxLength="50"/>


        <EditText
            android:id="@+id/et_departureTime"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/et_destination"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/et_carNum"
            android:hint="@string/fleet_departureTime"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="date"/>



        <EditText
            android:id="@+id/et_carNum"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintTop_toBottomOf="@+id/et_destination"
            app:layout_constraintLeft_toRightOf="@+id/et_departureTime"
            app:layout_constraintRight_toRightOf="parent"
            android:hint="@string/fleet_carNum"
            android:maxLength="20"
           />



        <EditText
            android:id="@+id/et_cost"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@+id/et_departureTime"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/et_vacancy"
            app:layout_constraintHorizontal_weight="1"
            android:hint="@string/fleet_cost"
            android:inputType="number"
            android:maxLength="5"
            />



        <EditText
            android:id="@+id/et_vacancy"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            app:layout_constraintTop_toBottomOf="@+id/et_carNum"
            app:layout_constraintLeft_toRightOf="@+id/et_cost"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_weight="1"
            android:hint="@string/fleet_vacancy"
            android:inputType="number"
            android:maxLength="2"/>


        <EditText
            android:id="@+id/et_contact"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_vacancy"
            app:layout_constraintRight_toLeftOf="@+id/et_phone"
            android:hint="@string/fleet_contact"
            android:maxLength="30"/>




        <EditText
            android:id="@+id/et_phone"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            app:layout_constraintHorizontal_weight="1"
            android:inputType="phone"
            android:hint="@string/fleet_phone"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_vacancy"
            app:layout_constraintLeft_toRightOf="@+id/et_contact"
            />




        <com.cullen.tatu.view.ui.LineEditText
            android:id="@+id/et_desc"
            style="@style/EditTextStyle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_phone"
            android:layout_marginTop="@dimen/horizontal_margin"
            android:layout_height="@dimen/dp_200"
            android:hint="@string/fleet_desc"
            android:textSize="@dimen/text_size_subheading"
            android:gravity="top"/>




</androidx.constraintlayout.widget.ConstraintLayout>
