<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/iContentView"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_200"
    android:background="@android:color/white"
    android:paddingStart="0dp"
    android:paddingLeft="0dp"
    android:paddingEnd="0dp"
    android:paddingRight="0dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="3dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/vertical_list_normal"
            android:layout_marginTop="@dimen/vertical_margin"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/iDepartureText"
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/fleet_departure"
                android:textColor="@color/color_text_dark_dark"
                android:textSize="@dimen/text_size_app_bar" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_goto" />


            <TextView
                android:id="@+id/iDestinationText"
                style="@style/TextViewStyle"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:ellipsize="end"
                android:gravity="right"
                android:lines="1"
                android:maxLines="1"
                android:text="@string/fleet_destination"
                android:textColor="@color/color_text_dark_dark"
                android:textSize="@dimen/text_size_app_bar" />




        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_4">

            <TextView
                android:id="@+id/iTimeText"
                style="@style/TextViewStyle"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/fleet_departureTime"
                android:textSize="@dimen/text_size_subheading" />


            <TextView
                android:id="@+id/iCarNumText"
                style="@style/TextViewStyle"
                android:layout_alignParentEnd="true"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:text="@string/fleet_carNum"
                android:maxLines="1"
                android:textColor="@color/color_text_sliver"
                android:textSize="@dimen/text_size_body" />


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_4">

            <TextView
                android:id="@+id/iCostText"
                style="@style/TextViewStyle"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/fleet_cost"
                android:textSize="@dimen/text_size_subheading" />


            <TextView
                android:id="@+id/iVacancyText"
                style="@style/TextViewStyle"
                android:layout_alignParentEnd="true"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/fleet_vacancy"
                android:textColor="@color/color_text_sliver"
                android:textSize="@dimen/text_size_body" />


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_4">

            <TextView
                android:id="@+id/iContactText"
                style="@style/TextViewStyle"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/fleet_contact"
                android:textSize="@dimen/text_size_body" />


            <TextView
                android:id="@+id/iPhoneText"
                style="@style/TextViewStyle"
                android:layout_alignParentEnd="true"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/fleet_phone"
                android:autoLink="phone"
                android:textColor="@color/app_orange"
                android:textSize="@dimen/text_size_body" />


        </RelativeLayout>

        <TextView
            android:layout_marginTop="@dimen/vertical_margin"
            android:id="@+id/iDescText"
            style="@style/TextViewStyle"
            android:text="@string/fleet_desc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </LinearLayout>





</androidx.cardview.widget.CardView >