<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tatu.essay.view.main.MainActivity"
    android:orientation="vertical">



    <androidx.viewpager.widget.ViewPager
        android:id="@+id/mViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#888" />

    <com.yinglan.alphatabs.AlphaTabsIndicator
        android:id="@+id/alphaIndicator"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:orientation="horizontal">

        <com.yinglan.alphatabs.AlphaTabView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:tabIconNormal="@mipmap/home_normal"
            app:tabIconSelected="@mipmap/home_selected"
            app:tabText="@string/app_module_essay"
            app:tabTextSize="13sp"
            app:textColorNormal="#999999"
            app:textColorSelected="#46c01b" />

        <com.yinglan.alphatabs.AlphaTabView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:tabIconNormal="@mipmap/category_normal"
            app:tabIconSelected="@mipmap/category_selected"
            app:tabText="@string/app_module_fleet"
            app:tabTextSize="13sp"
            app:textColorNormal="#999999"
            app:textColorSelected="#46c01b" />

        <com.yinglan.alphatabs.AlphaTabView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:tabIconNormal="@mipmap/service_normal"
            app:tabIconSelected="@mipmap/service_selected"
            app:tabText="@string/app_module_discover"
            app:tabTextSize="13sp"
            app:textColorNormal="#999999"
            app:textColorSelected="#46c01b" />


        <com.yinglan.alphatabs.AlphaTabView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="5dp"
            app:tabIconNormal="@mipmap/mine_normal"
            app:tabIconSelected="@mipmap/mine_selected"
            app:tabText="@string/app_module_me"
            app:tabTextSize="13sp"
            app:textColorNormal="#999999"
            app:textColorSelected="#46c01b" />
    </com.yinglan.alphatabs.AlphaTabsIndicator>

</LinearLayout>
