<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ActivityStyle"
    android:id="@+id/root"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.user.LoginActivity">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/image_normal"
        android:layout_height="@dimen/image_normal"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_fav"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingStart="@dimen/space_screen_align"
        android:paddingEnd="@dimen/space_screen_align"
        android:fillViewport="true"
        android:scrollbarThumbVertical="@android:color/transparent"
        android:scrollbars="vertical">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_item"
                android:layout_marginTop="200dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="@dimen/space_card">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_blank"
                    android:src="@drawable/ic_mobile_flag"/>

                <EditText
                    android:id="@+id/et_mobile"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/login_hint_username"
                    android:inputType="textVisiblePassword"
                    android:maxLength="11"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/md_grey_500"
                    android:textColorHint="@color/md_grey_500"
                    android:textSize="@dimen/h3_body"/>

                <ImageView
                    android:id="@+id/iv_clean_phone"
                    android:layout_width="@dimen/button_height"
                    android:layout_height="fill_parent"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_clear"
                    android:visibility="gone"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/md_grey_200"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/space_item"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="@dimen/space_card">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_blank"
                    android:src="@drawable/ic_password_flag"/>

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/login_hint_password"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:singleLine="true"
                    android:text=""
                    android:textColor="@color/md_grey_500"
                    android:textColorHint="@color/md_grey_500"
                    android:textSize="@dimen/h3_body"/>

                <ImageView
                    android:id="@+id/clean_password"
                    android:layout_width="@dimen/button_height"
                    android:layout_height="fill_parent"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_clear"
                    android:visibility="gone"/>

                <ImageView
                    android:id="@+id/iv_show_pwd"
                    android:layout_width="@dimen/button_height"
                    android:layout_height="fill_parent"
                    android:scaleType="centerInside"
                    android:src="@drawable/pass_gone"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/md_grey_200"/>

            <Button
                android:id="@+id/btn_register"
                style="@style/ButtonStyle"
                android:layout_marginTop="@dimen/space_blank"
                android:background="@drawable/button_corner"
                android:text="@string/login_btn_register"
                android:textColor="@color/text_sliver_light"
                android:textSize="@dimen/h1"/>


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <include android:id="@+id/service" layout="@layout/bottom_message" />


</androidx.constraintlayout.widget.ConstraintLayout>